# rs_pseries

./: .gitignore  CMakeLists.txt  package.xml
config/: usr_config_name.yaml
config/system_config/general_config/: config.yaml
config/system_config/localization_config/: rs_localization.yaml
config/system_config/localization_config/default_config/: default.yaml  grid_map_server.yaml
config/system_config/localization_config/default_config/Observer/: ProbabilityHistogramObserver.yaml
config/system_config/perception_config/: rs_perception.yaml
config/system_config/perception_config/communication_config/: communication_config.yaml
config/system_config/perception_config/core_config/: core_config.yaml
config/system_config/perception_config/core_config/multi_lidar/: left_lidar_config.yaml  middle_lidar_config.yaml  right_lidar_config.yaml
config/system_config/perception_config/roi_config/: roi-copy.yaml  roi-gxx.yaml  roi.yaml
config/system_config/preprocessing_config/: rs_preprocessing.yaml
config/system_config/result_sender_config/: result_sender.yaml
config/system_config/sensor_config/lidar/: rs_lidar.yaml
config/system_config/sensor_config/lidar/back_lidar/: lidar.yaml
config/system_config/sensor_config/lidar/front_lidar/: lidar.yaml
config/system_config/sensor_config/lidar/left_lidar/: lidar.yaml
config/system_config/sensor_config/lidar/middle_lidar/: lidar.yaml
config/system_config/sensor_config/lidar/right_lidar/: lidar.yaml
config/system_config/sensor_config/other_sensors/: rs_imu.yaml
config/usr_config/: calibration (复件).yaml  calibration.yaml  usr_config_only_localization.yaml  usr_config_only_perception (复件).yaml  usr_config_only_perception.yaml  usr_config_perception_and_localization.yaml
doc/: rs_pseries.md  rs_pseries_config_note.md  rs_pseries_msg_note.md  rs_pseries_percept_topic_example.md
